--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                 Portfolio
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-                <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+                <a class="dropdown-item" href="portfolio_col/portfolio-1-col.html">1 Column Portfolio</a>
+                <a class="dropdown-item" href="portfolio_col/portfolio-2-col.html">2 Column Portfolio</a>
+                <a class="dropdown-item" href="portfolio_col/portfolio-3-col.html">3 Column Portfolio</a>
+                <a class="dropdown-item" href="portfolio_col/portfolio-4-col.html">4 Column Portfolio</a>
+                <a class="dropdown-item" href="portfolio_col/portfolio-item.html">Single Portfolio Item</a>
               </div>
             </li>
             <li class="nav-item">
@@ -53,9 +53,9 @@
                 Blog
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-                <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-                <a class="dropdown-item" href="blog-post.html">Blog Post</a>
+                <a class="dropdown-item" href="blog/blog-home-1.html">Blog Home 1</a>
+                <a class="dropdown-item" href="blog/blog-home-2.html">Blog Home 2</a>
+                <a class="dropdown-item" href="blog/blog-post.html">Blog Post</a>
               </div>
             </li>
             <li class="nav-item dropdown">
@@ -63,11 +63,11 @@
                 Other Pages
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-                <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-                <a class="dropdown-item" href="faq.html">FAQ</a>
-                <a class="dropdown-item" href="404.html">404</a>
-                <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+                <a class="dropdown-item" href="etc/full-width.html">Full Width Page</a>
+                <a class="dropdown-item" href="etc/sidebar.html">Sidebar Page</a>
+                <a class="dropdown-item" href="etc/faq.html">FAQ</a>
+                <a class="dropdown-item" href="etc/404.html">404</a>
+                <a class="dropdown-item" href="etc/pricing.html">Pricing Table</a>
               </div>
             </li>
           </ul>
@@ -119,15 +119,15 @@
     <!-- Page Content -->
     <div class="container">
 
-      <h1 class="my-4">Welcome to Modern Business</h1>
+      <h1 class="my-4">Knowledge</h1>
 
       <!-- Marketing Icons Section -->
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
+            <h4 class="card-header">C++</h4>
             <div class="card-body">
-              <p class="card-text" style = "font-family: 'Noto Sans'">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+              <p class="card-text">학습</p>
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">Learn More</a>
@@ -136,9 +136,10 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
+            <h4 class="card-header">JavaScript</h4>
             <div class="card-body">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+              <p class="card-text">학습
+              </p>
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">Learn More</a>
@@ -147,9 +148,9 @@
         </div>
         <div class="col-lg-4 mb-4">
           <div class="card h-100">
-            <h4 class="card-header">Card Title</h4>
+            <h4 class="card-header">Study</h4>
             <div class="card-body">
-              <p class="card-text" style = "font-family: 'Noto Sans'">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+              <p class="card-text">Study</p>
             </div>
             <div class="card-footer">
               <a href="#" class="btn btn-primary">Learn More</a>
@@ -160,7 +161,7 @@
       <!-- /.row -->
 
       <!-- Portfolio Section -->
-      <h2>Portfolio Heading</h2>
+      <h1>Project List</h1>
 
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item">
@@ -272,7 +273,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 text-center text-white">Copyright &copy; SongNamJoo-aYido 2018</p>
       </div>
       <!-- /.container -->
     </footer>
